# mren_waste_collection

./: CMakeLists.txt  README.md  mkdocs.yml  package.xml  requirements-docs.txt
docs/nodes/: simple_servoing.md  teleop.md
launch/: keyboard_control.launch  turtlesim_cv_test.launch
scripts/: can_error_publisher.py  orange_error_publisher.py  realsense_publisher.py  turtlesim_controller.py  wasd_teleop.py  webcam_publisher.py
scripts/xbest_openvino_model/: best.xml  metadata.yaml
src/: go1_teleop_key.cpp  simple_servoing_node.cpp
